deploy/k8s/ingest-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingest
  namespace: supply-shock
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ingest
  template:
    metadata:
      labels:
        app: ingest
    spec:
      containers:
        - name: ingest
          image: ghcr.io/shiroonigami23-ui/global-supply-shock-platform/ingest:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8081
            initialDelaySeconds: 10
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8081
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "800m"
              memory: "512Mi"
